xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__unary_plus.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"+1\")"
---
Ok(
    Spanned {
        value: Unary(
            Unary {
                op: Plus,
                atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 1..2,
                },
            },
        ),
        span: 0..2,
    },
)
