xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__unknown_variable_name.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"$unknown\")"
---
Err(
    SpannedError {
        error: XPST0008,
        span: SourceSpan(
            0,
            8,
        ),
    },
)
