xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__wrong_amount_of_arguments.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"fn:string(1, 2, 3)\")"
---
Err(
    SpannedError {
        error: XPST0017,
        span: SourceSpan(
            0,
            18,
        ),
    },
)
